# natus

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml  azure-pipelines.yml  clang-format.txt
application/: CMakeLists.txt  app.cpp  app.h  global.cpp  global.h  protos.h  result.h  system.cpp  system.h  typedefs.h
application/application/: application.h  iapplication.h  window_application.cpp  window_application.h
application/platform/: gfx_context.h  gl_info.h  platform_application.cpp  platform_application.h  platform_window.h  window_message.h  window_message_receiver.hpp
application/util/: app_essentials.cpp  app_essentials.h  simple_app_essentials.cpp  simple_app_essentials.h
application/window/: decorator_window.cpp  decorator_window.h  gapi_info.h  gl_info.h  gl_window.h  irender_context.h  iwindow.h  iwindow_handle.h  iwindow_message_listener.h  render_context_info.h  window.h  window_info.h  window_message.h  window_message_receiver.cpp  window_message_receiver.h  window_type.h
audio/: CMakeLists.txt  async.cpp  async.h  buffer.hpp  enums.h  global.cpp  global.h  id.hpp  object.hpp  result.h  typedefs.h
audio/backend/: audio_capture_helper.cpp  audio_capture_helper.h  backend.cpp  backend.h  types.h
audio/buffer/: ibuffer.hpp  pcm_buffer.hpp
audio/object/: buffer_object.h  capture_object.h
collide/: CMakeLists.txt  hit_test_types.h  typedefs.h
collide/2d/: hit_tests.hpp
concurrent/: CMakeLists.txt  api.h  global.cpp  global.h  helper.h  isleep.hpp  mrsw.hpp  mutex.h  parallel_for.hpp  protos.h  range_1d.hpp  result.h  scheduler.h  semaphore.hpp  semaphore_guard.hpp  sync_object.hpp  task.hpp  thread_pool.hpp  typedefs.h
concurrent/command_system/: command.h  command_list.cpp  command_list.h  command_system.cpp  command_system.h  command_system_state.h
concurrent/container/: vector.hpp
concurrent/helper/: helper_os.h
concurrent/job/: job.h  job_funk.h  job_scheduler.cpp  job_scheduler.h
concurrent/primitive/: sync_object.hpp
concurrent/task/: async_executor.cpp  async_executor.h  itask.h  itask_scheduler.h  loose_thread_scheduler.hpp  serial_executor.cpp  serial_executor.h  task.cpp  task.h  task.hpp  task_graph.cpp  task_graph.h  task_scheduler.cpp  task_scheduler.h  tasks.h
core/: CMakeLists.txt  assert.h  boolean.h  break_if.hpp  cast.hpp  checks.h  execute_if.hpp  execute_result.h  typedefs.hpp  types.hpp  uint8_split_merge.hpp
core/macros/: common.h  function.h  move.h  typedef.h
device/: CMakeLists.txt  component.hpp  device.hpp  global.cpp  global.h  imapping.hpp  imodule.h  mapping.hpp  physical.hpp  result.h  system.cpp  system.h  typedefs.h
device/components/: button.hpp  key.hpp  motor.hpp  point.hpp  scroll.hpp  stick.hpp
device/devices/: three_button_mouse.hpp
device/layouts/: ascii.hpp  ascii_keyboard.hpp  game_controller.hpp  three.hpp  three_mouse.hpp  xbox_controller.hpp
device/modules/: vdev_module.cpp  vdev_module.h
font/: CMakeLists.txt  glyph_atlas.cpp  glyph_atlas.h  result.h  structs.h  typedefs.h
font/stb/: stb_glyph_atlas_creator.cpp  stb_glyph_atlas_creator.h
format/: CMakeLists.txt  future_item.hpp  future_items.hpp  global.cpp  global.h  imodule.h  item.hpp  module_factory.hpp  module_registry.hpp  typedefs.h
format/natus/: natus_module.cpp  natus_module.h  natus_structs.h
format/nsl/: nsl_module.cpp  nsl_module.h
format/stb/: stb_module.cpp  stb_module.h
format/wav/: wav_module.cpp  wav_module.h
gfx/: CMakeLists.txt  protos.h  typedefs.h
gfx/camera/: generic_camera.cpp  generic_camera.h  icamera.h  ilens.h  pinhole_camera.h  pinhole_lens.h
gfx/font/: text_render_2d.cpp  text_render_2d.h
gfx/imgui/: imgui.cpp  imgui.h
gfx/primitive/: line_render_2d.cpp  line_render_2d.h  line_render_3d.cpp  line_render_3d.h  primitive_render_2d.cpp  primitive_render_2d.h  primitive_render_3d.cpp  primitive_render_3d.h  tri_render_2d.cpp  tri_render_2d.h  tri_render_3d.cpp  tri_render_3d.h
gfx/sprite/: sprite_render_2d.cpp  sprite_render_2d.h
gfx/util/: quad.cpp  quad.h
gl/: CMakeLists.txt  protos.h  result.h  typedefs.h
gl/gl/: gl.cpp  gl.h
gpu/: CMakeLists.txt  async.cpp  async.h  async_id.hpp  global.h  id.hpp  object.hpp  protos.h  result.h  typedefs.h  types.h
gpu/backend/: backend.cpp  backend.h  id.hpp  types.h
gpu/buffer/: index_buffer.hpp  vertex_attribute.h  vertex_buffer.hpp
gpu/configuration/: geometry_configuration.h  image_configuration.h  render_config.h  render_configuration.h
gpu/shader/: geometry_shader.h  geometry_shader.hpp  (+8 more)
graphics/: CMakeLists.txt  async.cpp  async.h  async_id.hpp  global.h  id.hpp  object.hpp  protos.h  result.h  typedefs.h  types.h
io/: CMakeLists.txt  api.h  database.cpp  database.h  global.cpp  global.h  handle.cpp  handle.h  location.hpp  monitor.hpp  obfuscator.hpp  protos.h  result.h  system.cpp  system.h  typedefs.h
log/: CMakeLists.txt  api.h  function.h  global.cpp  global.h  log_level.h  protos.h  result.h  typedefs.h
math/: CMakeLists.txt  typedefs.h
memory/: CMakeLists.txt  allocator.hpp  api.h  arena.hpp  global.cpp  global.h  handle.hpp  macros.h  protos.h  res.hpp  typedefs.h
nsl/: CMakeLists.txt  README.md  ast.hpp  database.hpp  dependency_resolver.hpp  enums.hpp  format_proposal.nsl  function_declaration_analyser.hpp  function_signature_analyser.hpp  generator.cpp  generator.h  generator.hpp  generator_structs.hpp  nodes.h  parser.cpp  parser.h  parser.hpp  parser_structs.hpp  symbol.hpp  symbol_table.hpp  typedefs.h
ogl/: CMakeLists.txt  result.h  typedefs.h
physics/: CMakeLists.txt  emitters.hpp  force_fields.hpp  particle.h  particle_system.cpp  particle_system.h  protos.h  result.h  typedefs.h
soil/: CMakeLists.txt  id.hpp  macros.h  protos.h  res.hpp  rptr.hpp  soil.cpp  typedefs.h
std/: CMakeLists.txt  filesystem.hpp  list.hpp  map.hpp  stack.hpp  string.hpp  typedefs.h  vector.hpp
system/: CMakeLists.txt  global.cpp  global.h  protos.h  typedefs.h
tool/: CMakeLists.txt  protos.h  result.h  structs.h  typedefs.h
(+340 files in other folders)
